Closed Bug 204405 Opened 21 years ago Closed 21 years ago

warning: unused variable `PRUnichar nullChar' in nsNodeInfo::Equals

Categories

(Core :: Layout, defect)

x86
BeOS
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/swap/BEOS/mozilla/content/base/src/nsNodeInfo.cpp:217: warning: unused variable `PRUnichar nullChar'
Attached patch remove nullCharSplinter Review
Attachment #122449 - Flags: superreview?(peterv)
Attachment #122449 - Flags: review?(peterv)
Attachment #122449 - Flags: superreview?(peterv)
Attachment #122449 - Flags: superreview+
Attachment #122449 - Flags: review?(peterv)
Attachment #122449 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: