Bug 204405 warning: unused variable `PRUnichar nullChar' in nsNodeInfo::Equals r=peterv sr=peterv